Fixed some spacing

--- a/website/LESS/body.less
+++ b/website/LESS/body.less
@@ -17,6 +17,7 @@ body {
         background-color: @fontMain;
         @media @max708 {
                 height: 2rem;
+                margin-top: 1rem;
             }
 
         h1 {
@@ -219,7 +220,7 @@ body {
             .hero3 {
                 max-width: 100%;
                 margin-top: 1.5rem;
-                margin-bottom: 3.5rem; 
+                margin-bottom: 2.5rem; 
             }
         }
     } /* End of Home Page */
