--- a/website/css/main.css
+++ b/website/css/main.css
@@ -215,6 +215,7 @@ body .message {
 @media (max-width: 710px) {
   body .message {
     height: 2rem;
+    margin-top: 1rem;
   }
 }
 body .message h1 {
@@ -430,7 +431,7 @@ body .center main .products2 .txt2:hover {
 body .center main .hero3 {
   max-width: 100%;
   margin-top: 1.5rem;
-  margin-bottom: 3.5rem;
+  margin-bottom: 2.5rem;
 }
 body .shopContent {
   display: flex;
